# FractalFun

./: CMakeLists.txt  bmpWriter.cpp  bmpWriter.h  colours.h  complex_t.h  main.c  main.cpp
lodepng/: readme.txt
